fix broken style

--- a/src/plugins/csv/csv.less
+++ b/src/plugins/csv/csv.less
@@ -63,9 +63,13 @@
         font-weight: bold;
     }
   
+    .global-search-render {
+        margin-bottom: 10px;
+    }
 
     table {
         border: 1px solid rgb(146, 146, 146);
+        margin-bottom: 10px;
       
         tbody {
           border-bottom: 1px solid rgb(146, 146, 146);
@@ -75,7 +79,24 @@
           color: white;
           border-bottom: 1px solid rgb(146, 146, 146);
           border-right: 1px solid rgb(146, 146, 146);
-          padding: 2px 10px;
+          padding: 2px 10px 4px 10px;
+
+          .min-max-renderer {
+            min-width: 200px;
+            display: flex;
+
+            .search-renderer {
+              flex: 1;
+
+              input {
+                width: 99%;
+              }
+            }
+
+            .search-renderer:first-child {
+              margin-right: 3px;
+            }
+          }
         }
 
         tr {
